feat: add markdown rendering for post and comment content

--- a/templates/comments.html
+++ b/templates/comments.html
@@ -16,7 +16,7 @@
                             </div>
                         </div>
                         <div class="comment-content">
-                            {{.Body}}
+                            {{markdownToHTML .Body}}
                         </div>
                     </div>
                     {{if hasReplies .}}
