--- a/templates/post.html
+++ b/templates/post.html
@@ -34,9 +34,9 @@
     {{end}}
     {{end}}
     {{end}}
-<div class="post-content">
-  {{.Data.Selftext}}
-</div>
+    <div class="post-content">
+      {{markdownToHTML .Data.Selftext}}
+    </div>
   </article>
   {{end}}
 
